# varix

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: schema.md
src/varix/: __init__.py
src/varix/adapters/: __init__.py  fake.py  gemini.py
src/varix/analysis/: __init__.py  _helpers.py  impact.py  localizer.py  orchestration.py  registry.py
src/varix/analysis/classifiers/: __init__.py  ordering.py  prompt_side.py  provider_side.py  time_or_state.py  tool_side.py
src/varix/core/: __init__.py  adapter.py  clock.py  errors.py  protocol_test_suite.py  rng.py  types.py  variance.py
src/varix/execution/: __init__.py  replayer.py  runner.py
src/varix/surface/: __init__.py  cli.py  dispatch.py  loader.py  reporter.py  storage.py
tests/: test_smoke.py
tests/adapters/: test_fake.py  test_gemini.py
tests/analysis/: test_analyze.py  test_impact.py  test_infer_capabilities.py  test_localizer.py  test_registry.py
tests/analysis/classifiers/: test_ordering.py  test_prompt_side.py  test_provider_side.py  test_time_or_state.py  test_tool_side.py
tests/core/: test_adapter.py  test_clock.py  test_errors.py  test_protocol_test_suite.py  test_rng.py  test_types.py  test_variance.py
tests/execution/: test_replayer.py  test_runner.py
tests/integration/: test_classifier_pipeline.py
tests/surface/: test_cli.py  test_dispatch.py  test_impact_cli.py  test_list.py  test_loader.py  test_replay.py  test_reporter.py  test_show_explain.py  test_storage.py
