[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "varix"
description = "A nondeterminism classifier for agent pipelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "varix contributors" }]
keywords = ["agents", "llm", "nondeterminism", "diagnostics", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.version]
path = "src/varix/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/varix"]

[tool.hatch.build.targets.sdist]
include = ["src/varix", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/varix"]
warn_unused_ignores = true
warn_redundant_casts = true
